                    1.3.1 Release Notes
                  ------------------------

This file contains a description of the major changes to ProFTPD for the
1.3.1 release cycle, from the 1.3.1rc1 release to the 1.3.1-stable release.
More information on these changes can be found in the NEWS and ChangeLog
files.

1.3.1rc3
---------

  + New documentation:

    doc/howto/Timestamps.html

1.3.1rc2
---------

  + Bugfixes:

    Fixed mod_sql's mishandling of WHERE clauses.  This was causing
    problems with mod_sql-based authentication, and errors containing
    "{UNKNOWN TAG}" to appear in the SQLLogFile.

    Under certain conditions, use of shared modules could lead to segfaults.
    This usually happened after proftpd had been restarted (using SIGHUP)
    a couple of times.

    Symlinks in a skeleton directory were not being properly copied when
    the CreateHome directive was used.

  + New configuration directives:

    RadiusNASIdentifier

      By default, the mod_radius module sends the string "ftp" as the
      NAS-Identifier attribute in RADIUS packets.  This string is now
      configurable via the RadiusNASIdentifier directive.

1.3.1rc1
---------
  + Command changes:

      MDTM now always returns times in GTM, regardless of TimesGMT setting

  + New configuration directives:

      DisplayChdir

        This directive replaces the old DisplayFirstChdir directive,
        and will cause the configured file to be displayed whenever the
        client changes into the directory in question, rather than only
        once.

        To get the previous behavior, use:

          DisplayChdir path true

        which says to display the given path only once.

      DisplayFileTransfer

        Whenever a file has been successfully uploaded/downloaded, the
        configured file will be displayed to the client.

      FACLEngine

        The mod_facl module is used to support POSIX ACLs, and is built