@@ -1,4 +1,4 @@
-<!-- $Id: index.html,v 1.18 2007-02-15 19:00:17 castaglia Exp $ -->
+<!-- $Id: index.html,v 1.19 2007-05-24 17:15:24 castaglia Exp $ -->
 <!-- $Source: /home/proftpd-core/backup/proftp-cvsroot/proftpd/doc/howto/index.html,v $ -->
 
 <html>
@@ -200,6 +200,11 @@ Recommended order of reading:
   </dd>
 
   <p>
+  <dt>On <a href="Tracing.html">Tracing</a>
+  <dd>Covers trace logging
+  </dd>
+
+  <p>
   <dt>On <a href="Filters.html">Filters</a>
   <dd>Covers the various <code>Filter</code> directives, and how to write
       regular expressions that match what you want
@@ -239,7 +244,7 @@ all of the directives to see everything that ProFTPD is capable of supporting.
 
 <p>
 <hr>
-Last Updated: <i>$Date: 2007-02-15 19:00:17 $</i><br>
+Last Updated: <i>$Date: 2007-05-24 17:15:24 $</i><br>
 <hr>
 
 </body>
