@@ -12,6 +12,7 @@ files.
   + New documentation:
 
     doc/howto/Timestamps.html
+    doc/howto/Tracing.html
 
 1.3.1rc2
 ---------
@@ -293,4 +294,4 @@ files.
 
           doc/howto/CreateHome.html
 
-Last Updated: $Date: 2007-02-15 19:02:05 $
+Last Updated: $Date: 2007-05-24 17:15:24 $
